--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout fork repository
         uses: actions/checkout@v3
         with:
-          repository: fjcloud/docs
+          repository: fjcloud/ocp-docs
           ref: main
           fetch-depth: 0
           token: ${{ secrets.PAT_GITHUB }}
